[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["tokio"] }
chrono = "0.4.42"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio","sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["log"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "tracing"] }
tracing = { version = "0.1.41", features = ["log"] }
